src/styles/_form-pages.scss
/* Styles for both contact us and request a qoute page here */
@use "colours" as *;
@use "mixins" as *;

.contact-info-card{
    padding-top: 1rem;
    color: $tertiary-dark-blue;
}
.form-h1{
    background-color: $secondary-yellow ;
    padding: 1rem;
    border-radius: 15px;
    position: relative;
    z-index: 1;
    left: -20px;
    max-width: 793px;

   
}
.form-svg{
    width: 60px;
    height: 63px;
    margin-bottom: 0.5rem;
}
.contact-row{
    display: flex;
    align-items: center;
    gap: 1rem;

}
.contact-info-card p ,
.contact-row{
    padding-left: 1rem;
}
.contact-card{
    background-color: $white;
    border-radius: 15px;

}

.form-card{
    background-color: $tertiary-dark-blue;
    font-family: 'assistant', sans-serif;
    color: $white;
    margin-bottom: 96px;
    border-radius: 15px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 1rem;

    input,
    select{
        width: 100%;
        height: 55px;
        margin-bottom: 1rem;
        border-radius: 4px;

    }
}


label{
    
    font-weight: bold;
    text-transform: uppercase;
}

input::placeholder,
textarea::placeholder,
option{
    font-family: 'assistant', sans-serif;
    font-weight: 400;
    font-size: 16px;
    color: $grey;
    padding: 0.5rem;
}
.message-box{
    height: 256px;
    width: 100%;
    border-radius: 4px;
   
}
.product-type-quantity{
    display: flex;
    gap: 1rem;

    div{
        flex: 1;
    }   
    
}
.submit-btn {
  @include btn ($white, $tertiary-dark-blue, #FFEDAD);
  display: inline-block;
  margin-top: 32px;
  width: 100%;
}


@media (min-width: 750px){


   
    .hero-grid{
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        align-items: start;
    }
    .h1-grid{
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        gap: 1rem;
    }

    .form-h1{
        grid-column: 1 / span 12;
        left: 0;
        border-radius: 0 15px 15px 0;
        
        
    }
    .form-h1 h1{
        grid-column: 3/ span 6;
        
    }
    .contact-card{
        grid-column: 3/ span 12;
        padding: 2rem 1rem 1rem 1rem;
        border-radius: 0 0 15px 15px;
        margin-top: -1rem;
    }
   
   

    .forms-page-wrapper{

          margin-bottom: 144px;
          gap: 1rem;
          display:grid;
          grid-template-columns: repeat(12, 1fr);
          align-items: start;
          
      }
    
    .forms-page-wrapper > :first-child{
        grid-column: 1 / span 5;

    
    }
    .background-form{
        background-color: $tertiary-dark-blue;
        margin-top: 2rem;
        
    }
    

    .form-card{
        grid-column: 7/ span 6;
        margin-top: 72px;
        box-shadow: none;
    }
   


}

//desktop layout
@media (min-width: 1200px) {
   

    .hero-grid{
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        align-items: start;
    }
    .h1-grid{
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        gap: 1rem;
    }

    .form-h1{
        grid-column: 1 / span 12;
        left: 0;
        border-radius: 0 15px 15px 0;
        
        
    }
    .form-h1 h1{
        grid-column: 6/ span 6;
        
    }
    .contact-card{
        grid-column: 6 / span 12;
        padding: 2rem 1rem 1rem 1rem;
        border-radius: 0 0 15px 15px;
        margin-top: -1rem;
    }
   
   

    .forms-page-wrapper{

          margin-bottom: 144px;
          gap: 1rem;
          display:grid;
          grid-template-columns: repeat(12, 1fr);
          align-items: start;
          
      }
    
    .forms-page-wrapper > :first-child{
        grid-column: 1 / span 5;

    
    }
    .background-form{
        background-color: $tertiary-dark-blue;
        margin-top: 2rem;
        
    }
    

    .form-card{
        grid-column: 7/ span 4;
        margin-top: 72px;
        box-shadow: none;
    }

}

